samples/_failures_safe/1761505197_05a02a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee043129.c: In function ‘main’:
./samples/SAFE/__tmp_ee043129.c:155:13: error: expected ‘;’ at end of input
  155 |     add_edge
      |             ^
      |             ;
./samples/SAFE/__tmp_ee043129.c:155:5: error: expected declaration or statement at end of input
  155 |     add_edge
      |     ^~~~~~~~
